syntax = "proto3";

package test.extensions.filters.listener.tls_inspector;

import "envoy/extensions/filters/listener/tls_inspector/v3/tls_inspector.proto";
import "test/extensions/filters/listener/common/fuzz/listener_filter_fuzzer.proto";
import "buf/validate/validate.proto";

message TlsInspectorTestCase {
  envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector config = 1
      [(buf.validate.field).message.required = true];
  uint32 max_size = 2 [(buf.validate.field).uint32.lte = 65536];
  test.extensions.filters.listener.FilterFuzzWithDataTestCase fuzzed = 3
      [(buf.validate.field).message.required = true];
}
